Alignment Fix

--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -387,6 +387,8 @@ footer i {
   background-color: #ffffff;
   margin-top:7.0rem;
   padding-bottom:3.0rem;
+  margin-left: 23.0rem;
+  margin-right: 23.0rem;
 
   }
 
@@ -394,13 +396,13 @@ footer i {
 	font-family: "Avenir";
 	line-height: 2;
 	word-spacing: 0.3rem;
-	margin-left: 3.5rem;
 	margin-top:5.0rem;
+	font-size: 2.1rem;
   }
 
 .text h5{
 	font-family: "Avenir";
-	font-size: 1.8rem;
+	font-size: 2.2rem;
 	font-weight: 600;
   }
 
@@ -410,8 +412,7 @@ footer i {
 
 .text img{
 	height:70.0rem;
-	margin-left:2.0rem;
-	max-width: 90.0rem;
+	max-width: 80.0rem;
 	height: auto;
 	margin-top: 5.0rem;
 	margin-bottom: 3.0rem;
@@ -445,10 +446,9 @@ footer i {
   border-radius: 0.2rem;
   color:  #00b3b3;
   text-decoration: none;
-  padding: 1.0rem 39.5rem;
+  padding: 1.0rem 26.0rem;
   border: 0.1rem solid  #00b3b3;
   font-family:"Avenir";
-  margin-left: 3.5rem;
 
 }
 
@@ -458,6 +458,8 @@ footer i {
   background-color: #ffffff;
   margin-top:7.0rem;
   padding-bottom:3.0rem;
+  margin-left: 20.0rem;
+ 
 
   }
 
@@ -465,8 +467,8 @@ footer i {
 	font-family: "Avenir";
 	line-height: 2;
 	word-spacing: 0.3rem;
-	margin-left: 3.5rem;
 	margin-top:5.0rem;
+
   }
 
 .art h5{
@@ -477,9 +479,13 @@ footer i {
 
 .art img{
 	height:35.0rem;
-	margin-left:2.0rem;
-	margin-top: 7.0rem;
+	margin-top: 17.0rem;
 	margin-bottom: 3.0rem;
+  }
+
+.image2 img{
+	height:26.0rem;
+	margin-top:20.0rem;
   }
 
 /* ARTGRID */
